--- a/writeup/prelude.tex
+++ b/writeup/prelude.tex
@@ -89,6 +89,7 @@
 \DeclareMathOperator{\ca}{ca}
 \DeclareMathOperator{\view}{view}
 \DeclareMathOperator{\ideal}{ideal}
+\DeclareMathOperator{\ncomb}{n-comb}
 
 % theorems
 \theoremstyle{plain}
