--- a/writeup/references.bib
+++ b/writeup/references.bib
@@ -1228,3 +1228,23 @@
 }
 
 
+@unpublished{shahar-zdancewic-2024,
+	author = {Shahar, Riley and Zdancewic, Steve},
+	title = {Categorical Phase Semantics for Linear Logic},
+	year = {2024},
+	note = {Forthcoming},
+}
+
+@article{kelly-1964,
+	title = {On MacLane's conditions for coherence of natural associativities,
+	         commutativities, etc.},
+	journal = {Journal of Algebra},
+	volume = {1},
+	number = {4},
+	pages = {397-402},
+	year = {1964},
+	issn = {0021-8693},
+	doi = {https://doi.org/10.1016/0021-8693(64)90018-3},
+	url = {https://www.sciencedirect.com/science/article/pii/0021869364900183},
+	author = {G.M Kelly},
+}
